--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p class="h1 text-center m-5">Edit item</p>
+<p class="h1 text-center m-5" data-aos="fade-down" data-aos-delay="100">Edit item</p>
 
 <div class="container">
     <div class="row">
