--- a/templates/items.html
+++ b/templates/items.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<p class="h1 text-center m-5"><strong>Get ideas for some awesome gifts!</strong></p>
+<p class="h1 text-center m-5" data-aos="fade-down" data-aos-delay="100"><strong>Get ideas for some awesome gifts!</strong></p>
 
 {% if items|length > 0 %}
 <div class="container">
