--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,10 +2,10 @@
 
 
 {% block content %}
-<p class="h1 text-center m-5 profile-text"><strong>{{ username }}'s Profile</strong></p>
+<p class="h1 text-center m-5 profile-text" data-aos="fade-down" data-aos-delay="100"><strong>{{ username }}'s Profile</strong></p>
 
 <div class="container">
-    <p class="h4">Create a new item<a href="{{ url_for('add_item') }}" class="btn btn-primary mx-2"><strong>+</strong></a></p>
+    <p class="h4" data-aos="fade-right">Create a new item<a href="{{ url_for('add_item') }}" class="btn btn-primary mx-2"><strong>+</strong></a></p>
 </div>
 
 
