--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p class="h1 text-center m-5" data-aos="fade-down" data-aos-delay="100">Edit item</p>
+<p class="h1 text-center m-5" data-aos="fade-down" data-aos-delay="100"><strong>Edit item</strong></p>
 
 <div class="container">
     <div class="row">
@@ -61,9 +61,9 @@
             <div class="row">
                 <div class="mb-3">
                     <!--Submit edit-->
-                    <button type="submit" class="btn btn-info">Complete</button>
+                    <button type="submit" class="btn btn-info" data-aos="fade-up" data-aos-delay="100" style="color: #fff;">Complete</button>
                     <!--Cancel edit-->
-                    <a href="javascript:history.back()" class="btn btn-secondary">Cancel</a>
+                    <a href="javascript:history.back()" class="btn btn-secondary" data-aos="fade-up" data-aos-delay="200">Cancel</a>
                 </div>
             </div>
         </form>
