--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                         <input id="query" name="query" class="form-control me-2 validate" minlength="3" type="search"
                             placeholder="Search" aria-label="Search" required>
                         <label for="query"></label>
-                        <button class="btn btn-info" type="submit">Search</button>
+                        <button class="btn btn-info" type="submit" style="color: #fff;">Search</button>
                     </form>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                             <input id="query" name="query" class="form-control me-2 validate" minlength="3"
                                 type="search" placeholder="Search" aria-label="Search" required>
                             <label for="query"></label>
-                            <button class="btn btn-info" type="submit">Search</button>
+                            <button class="btn btn-info" type="submit" style="color: #fff;">Search</button>
                         </form>
                     </div>
                     <div class="container">
