Added js back to top button

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/static/vendor/bootstrap/css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
@@ -108,7 +109,8 @@
                             <div class="social-links mt-3">
                                 <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
                                 <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="https://github.com/DenyTsjapanov/Milestone-Project-3.git" target="_blank"><i class="fab fa-github"></i></a>
+                                <a href="https://github.com/DenyTsjapanov/Milestone-Project-3.git" target="_blank"><i
+                                        class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -135,8 +137,10 @@
                     </div>
                     <div class="container">
                         <div class="copyright">
-                            <p class="text-center h6">&copy; Copyright. All Rights Reserved. Created by <a style="text-decoration: none; font-weight: 600; color: #0dcaf0;" class="h6" href="https://github.com/DenyTsjapanov">Deny
-                                Tsjapanov.</a></p>
+                            <p class="text-center h6">&copy; Copyright. All Rights Reserved. Created by <a
+                                    style="text-decoration: none; font-weight: 600; color: #0dcaf0;" class="h6"
+                                    href="https://github.com/DenyTsjapanov">Deny
+                                    Tsjapanov.</a></p>
                         </div>
                     </div>
                 </div>
@@ -145,6 +149,10 @@
         </div>
     </footer>
 
+    <!--Back to top button-->
+    <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
+
+    <!--Vendor files-->
     <script src="/static/vendor/jQuery/jquery-3.5.1.min.js"></script>
     <script src="/static/vendor/bootstrap/js/bootstrap.js"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
