--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,6 +76,34 @@ body {
     color: #009cbb;
 }
 
+/*--------------------------------------------------------------
+# Back to top button
+--------------------------------------------------------------*/
+.back-to-top {
+  position: fixed;
+  display: none;
+  right: 15px;
+  bottom: 15px;
+  z-index: 99999;
+}
+
+.back-to-top i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  background: #E7625F;
+  color: #fff!important;
+  transition: all 0.4s;
+}
+
+.back-to-top i:hover {
+  background: #fff;
+  color: #E7625F;
+}
 
 
 /* --- FOOTER --- */
@@ -123,8 +151,8 @@ body {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #fff;
-  color: #E7625F;
+  background: #C85250;
+  color: #fff;
   text-decoration: none;
 }
 
