--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,31 +79,22 @@ body {
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
-.back-to-top {
-  position: fixed;
+#myBtn {
   display: none;
-  right: 15px;
-  bottom: 15px;
-  z-index: 99999;
-}
-
-.back-to-top i {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50px;
-  background: #E7625F;
-  color: #fff!important;
-  transition: all 0.4s;
-  text-decoration: none;
-}
-
-.back-to-top i:hover {
-  background: #fff;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
   color: #E7625F;
+  cursor: pointer;
+  font-size: 40px;
+  transition: all ease-in-out 0.2s;
+}
+
+#myBtn:hover {
+  color: #C85250;
 }
 
 
@@ -152,8 +143,8 @@ body {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #C85250;
-  color: #fff;
+  background: #fff;
+  color: #E7625F;
   text-decoration: none;
 }
 
