--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <header>
+    <header id="header">
         <!-- Navigation panel-->
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
@@ -150,7 +150,7 @@
     </footer>
 
     <!--Back to top button-->
-    <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
+    <a onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-circle-up"></i></a>
 
     <!--Vendor files-->
     <script src="/static/vendor/jQuery/jquery-3.5.1.min.js"></script>
